--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test 1</title>
+    <title>test 1!!</title>
 </head>
 <body>
-    <p>test 1</p>
-    <p>hi its me</p>
+    <p>test 1!</p>
+    <p>hi its me!</p>
+    <p>hi</p>
+    <strong>warnning!</strong>
+    <strong>danger</strong>
 </body>
 </html>
